[workspace]
members = [
    "zomes/preference",
    # "zomes/p2pmessage",
    # "zomes/request",
    "zomes/username",
    "zomes/contacts",
    "zomes/group"
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hdk3 = {git = "https://github.com/holochain/holochain", rev = "4e1de9", package = "hdk3"}

